samples/_failures_safe/1761319800_5aaada_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_789d052a.c: In function ‘main’:
./samples/SAFE/__tmp_789d052a.c:149:5: error: expected declaration or statement at end of input
  149 |     if (b.data == NULL) {
      |     ^~
./samples/SAFE/__tmp_789d052a.c:149:5: error: expected declaration or statement at end of input
